Adding git hub portfolio link at bottom

--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
           <div class="col l6 s12">
             <h5 id='footer_header' class="white-text">About this site</h5>
             <p id='footer_details' class="grey-text text-lighten-4">
-              This site was made using Materialize. Parallax effect looks best on Chrome and Firefox on Mac OS or Firefox on Windows. Site is mobile-phone friendly. Spanish/English translation made with a javascript function saved for English and Spanish, original values in English stored in a closure, Spanish values stored in a separate file, elements get updated with DocumentGetElementById.
+              See Github for this site <a href="https://github.com/dacoolman/Portfolio" style="color:purple;">here</a>. This site was made using Materialize. Parallax effect looks best on Chrome and Firefox on Mac OS or Firefox on Windows. Site is mobile-phone friendly. Spanish/English translation made with a javascript function saved for English and Spanish, original values in English stored in a closure, Spanish values stored in a separate file, elements get updated with DocumentGetElementById.
             </p>
           </div>
         </div>
