changing link to periodic table

--- a/index.html
+++ b/index.html
@@ -462,10 +462,10 @@
       </div>
       <div class="col s12 m4">
         <div class="icon-block">
-          <h2 class="center brown-text"><a href='http://www.mikeberger.us/Periodic_Table/'><i class="material-icons">play_circle_filled</i></a></h2>
+          <h2 class="center brown-text"><a href='http://www.mikeberger.us/periodic/'><i class="material-icons">play_circle_filled</i></a></h2>
           <h5 class="center" id='deployment periodic header'>See Deployment</h5>
           <p class="light">
-            <a href='http://www.mikeberger.us/Periodic_Table/'>
+            <a href='http://www.mikeberger.us/periodic/'>
               <center>
                 <h5><span id='deployment periodic'>See Periodic Table</span></h5>
               </center></a>
