Changing periodic table description

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
           <h2 class="center brown-text"><i class="material-icons">help_outline</i></h2>
           <h5 class="center" id='details periodic header'>Details</h5>
           <p class="light" id='details periodic'>
-            Here is the periodic table I built from scratch. It was made purely with CSS and Javascript, no front-end framework needed
+            Periodic table generated through vanilla javascript, using an elements object and a map to elements object array to generate content. All done in one for-loop adding content to an empty div.
           </p>
         </div>
       </div>
