Changing links to periodic table

--- a/index.html
+++ b/index.html
@@ -126,6 +126,60 @@
     <h2 id='project header'>Projects</h2>
   </center>
   <div class='space_bottom'></div>
+  <!-- Periodic Section Start -->
+  <a name='periodic'></a><a name='periodica-espanol'></a>
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <div class="row center">
+          <h3 class="header col s12 black lighten-1">Periodic Table (CSS + Javascript) </h3>
+        </div>
+      </div>
+    </div>
+    <br><br><br>
+    <div class="parallax">
+      <img src="img/periodic_updated_2.jpg" alt="Unsplashed background img 2">
+    </div>
+  </div>
+  <br><br><br>
+  <div class="row">
+    <div class="col s12 m4">
+      <div class="icon-block">
+        <h2 class="center brown-text"><i class="material-icons">help_outline</i></h2>
+        <h5 class="center" id='details periodic header'>Details</h5>
+        <p class="light" id='details periodic'>
+          Periodic table generated through vanilla javascript, using an elements object and a map to elements object array to generate content. All done in one for-loop adding content to an empty div.
+        </p>
+      </div>
+    </div>
+    <div class="col s12 m4">
+      <div class="icon-block">
+        <h2 class="center brown-text"><a href='http://mikeberger.us/periodic/'><i class="material-icons">play_circle_filled</i></a></h2>
+        <h5 class="center" id='deployment periodic header'>See Deployment</h5>
+        <p class="light">
+          <a href='http://mikeberger.us/periodic/'>
+            <center>
+              <h5><span id='deployment periodic'>See Periodic Table</span></h5>
+            </center></a>
+        </p>
+      </div>
+    </div>
+    <div class="col s12 m4">
+      <div class="icon-block">
+       <h2 class="center brown-text"><a href='https://github.com/dacoolman/Periodic'><i class="material-icons">settings</i></a></h2>
+        <h5 class="center" id='code periodic header'>See Code</h5>
+        <p class="light">
+          <a href='https://github.com/dacoolman/Periodic'>
+            <center>
+              <h5><span id='code periodic'>See Github repository</span></h5>
+            </center>
+          </a>
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class='space_bottom'></div>
+  <!-- Ninja Tournament Section Start -->
   <a name='tournament'></a><a name='torneo-espanol'></a>
   <div id="slider_tournament" class="slider tournament">
     <ul class="slides">
@@ -202,6 +256,7 @@
     </div>
   </div>
   <div class='space_bottom'></div>
+  <!-- User Dashboard Section Start -->
   <a name='dashboard'></a><a name='panel-espanol'></a>
   <div id = "slider_dashboard" class="slider dashboard">
     <ul class="slides">
@@ -267,6 +322,7 @@
     </div>
   </div>
   <div class='space_bottom'></div>
+  <!-- Sicklists Section Start -->
   <a name='mean'></a><a name='mean-espanol'></a>
   <div id = "slider_sicklists" class="slider sicklists">
     <ul class="slides">
@@ -329,6 +385,7 @@
     </div>
   </div>
  <div class='space_bottom'></div>
+ <!-- Pacman Section Start -->
  <a name='pacman'></a><a name='pacman-espanol'></a>
   <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
@@ -382,6 +439,7 @@
     </div>
   </div>
   <div class='space_bottom'></div>
+  <!-- Chatroom Section Start -->
   <a name='chatroom'></a><a name='sala-espanol'></a>
   <div id='slider_chatroom' class="slider chatroom">
     <ul class="slides">
@@ -436,57 +494,7 @@
     </div>
   </div>
   <div class='space_bottom'></div>
-  <a name='periodic'></a><a name='periodica-espanol'></a>
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h3 class="header col s12 black lighten-1">Periodic Table (CSS + Javascript) </h3>
-        </div>
-      </div>
-    </div>
-    <br><br><br>
-    <div class="parallax">
-      <img src="img/periodic_updated_2.jpg" alt="Unsplashed background img 2"></div>
-    </div>
-    <br><br><br>
-    <div class="row">
-      <div class="col s12 m4">
-        <div class="icon-block">
-          <h2 class="center brown-text"><i class="material-icons">help_outline</i></h2>
-          <h5 class="center" id='details periodic header'>Details</h5>
-          <p class="light" id='details periodic'>
-            Periodic table generated through vanilla javascript, using an elements object and a map to elements object array to generate content. All done in one for-loop adding content to an empty div.
-          </p>
-        </div>
-      </div>
-      <div class="col s12 m4">
-        <div class="icon-block">
-          <h2 class="center brown-text"><a href='http://www.mikeberger.us/periodic/'><i class="material-icons">play_circle_filled</i></a></h2>
-          <h5 class="center" id='deployment periodic header'>See Deployment</h5>
-          <p class="light">
-            <a href='http://www.mikeberger.us/periodic/'>
-              <center>
-                <h5><span id='deployment periodic'>See Periodic Table</span></h5>
-              </center></a>
-          </p>
-        </div>
-      </div>
-      <div class="col s12 m4">
-        <div class="icon-block">
-         <h2 class="center brown-text"><a href='https://github.com/dacoolman/Periodic'><i class="material-icons">settings</i></a></h2>
-          <h5 class="center" id='code periodic header'>See Code</h5>
-          <p class="light">
-            <a href='https://github.com/dacoolman/Periodic'>
-              <center>
-                <h5><span id='code periodic'>See Github repository</span></h5>
-              </center>
-            </a>
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class='space_bottom'></div>
+    <!-- Footer Start -->
     <a name='site'></a>
     <footer class="page-footer blue lighten-2">
       <div class="container">
