Adding Recursive Fill project

--- a/index.html
+++ b/index.html
@@ -179,6 +179,58 @@
     </div>
   </div>
   <div class='space_bottom'></div>
+  <!-- Recursive Fill Section Start -->
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <div class="row center">
+          <h3 class="header col s12 black lighten-1">Recursive Fill (Javascript) </h3>
+        </div>
+      </div>
+    </div>
+    <br><br><br>
+    <div class="parallax">
+      <img src="img/fill.jpg" alt="Unsplashed background img 2">
+    </div>
+  </div>
+  <br><br><br>
+  <div class="row">
+    <div class="col s12 m4">
+      <div class="icon-block">
+        <h2 class="center brown-text"><i class="material-icons">help_outline</i></h2>
+        <h5 class="center" id='details fill header'>Details</h5>
+        <p class="light" id='details fill'>
+          A simple example of recursion. Click on a square and all squares around it that have the same color will turn black. Supported on Chrome and Firefox
+        </p>
+      </div>
+    </div>
+    <div class="col s12 m4">
+      <div class="icon-block">
+        <h2 class="center brown-text"><a href='http://mikeberger.us/fill/'><i class="material-icons">play_circle_filled</i></a></h2>
+        <h5 class="center" id='deployment fill header'>See Deployment</h5>
+        <p class="light">
+          <a href='http://mikeberger.us/fill/'>
+            <center>
+              <h5><span id='deployment fill'>See Recursive Fill Example</span></h5>
+            </center></a>
+        </p>
+      </div>
+    </div>
+    <div class="col s12 m4">
+      <div class="icon-block">
+       <h2 class="center brown-text"><a href='https://github.com/dacoolman/recursive-fill'><i class="material-icons">settings</i></a></h2>
+        <h5 class="center" id='code fill header'>See Code</h5>
+        <p class="light">
+          <a href='https://github.com/dacoolman/recursive-fill'>
+            <center>
+              <h5><span id='code fill'>See Github repository</span></h5>
+            </center>
+          </a>
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class='space_bottom'></div>
   <!-- Ninja Tournament Section Start -->
   <a name='tournament'></a><a name='torneo-espanol'></a>
   <div id="slider_tournament" class="slider tournament">
