Changing about me

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <h2 class="icon-block"><i class="material-icons">info_outline</i></h2>
           <h4 id='about header'>About Me</h4>
           <p class="left-align light" id='about text'>
-            Hey I'm Mike, thanks for visiting my portfolio. I am a highly motivated, quality-focused web developer looking for a permanent software engineering role. I am a current full-stack developer at a start-up in San Mateo developing a B2B social application. Prior to that I was a UI Engineer for a startup in the Bay Area designing the application’s UI from scratch. I have professional level expertise in JavaScript, Backbone, LESS/CSS, Version Control/Git, MySQL and PHP among many other technologies and frameworks. My goal is to write modular, scalable, and industry-standard code for a dynamic company where I can use my creativity to solve challenging problems.
+            Hey I'm Mike, thanks for visiting my portfolio. I am a full-stack developer and have just finished my last contract at a start-up in San Mateo developing a B2B social application. Prior to that I was a UI Engineer for a startup in the Bay Area designing the application’s UI from scratch. I have professional level expertise in JavaScript, Backbone, LESS/CSS, Version Control/Git, MySQL and PHP among many other technologies and frameworks. I am a Cum Laude graduate of Rice University and have 2.5 years of experience in Quality Assurance + SQL working on a data warehouse application, as well as 1000+ hours of development experience at an immersive coding boot-camp in San Jose. My goal is to write modular, scalable, and industry-standard code for a dynamic company where I can use my creativity to solve challenging problems.
           </p>
         </div>
       </div>
