--- a/index.html
+++ b/index.html
@@ -126,6 +126,60 @@
     <h2 id='project header'>Projects</h2>
   </center>
   <div class='space_bottom'></div>
+ <!-- Pacman Section Start -->
+ <a name='pacman'></a><a name='pacman-espanol'></a>
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <div class="row center">
+          <h3 class="header col s12 black lighten-1">Pacman (Javascript + CSS)</h3>
+        </div>
+      </div>
+    </div>
+    <br><br><br>
+    <div class="parallax"><img src="img/pacman_portfolio.png" alt="Unsplashed background img 3"></div>
+  </div>
+  <br><br><br>
+  <div class="container">
+    <div class="section">
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center brown-text"><i class="material-icons">help_outline</i></h2>
+            <h5 class="center" id='details pacman header'>Details</h5>
+            <p class="light" id='details pacman'>Here is my implementation of Pacman. Code supports having as many ghosts and pacman as desired. Made with vanilla javascript on the client. Supported on Firefox and Chrome.</p>
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center brown-text"><a href='http://mikeberger.us/playpacman/'><i class="material-icons">play_circle_filled</i></a></h2>
+            <h5 class="center" id='deployment pacman header'>See Deployment</h5>
+            <p class="light">
+              <a href='http://mikeberger.us/playpacman/'>
+                <center>
+                  <h5><span id='deployment pacman'>Play Pacman</span></h5>
+                </center>
+              </a>
+            </p>
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center brown-text"><a href='https://github.com/dacoolman/Pacman'><i class="material-icons">settings</i></a></h2>
+            <h5 class="center" id='code pacman header'>See Code</h5>
+            <p class="light">
+              <a href='https://github.com/dacoolman/Pacman'>
+                <center>
+                  <h5><span id='code pacman'>See Github Repository</span></h5>
+                </center>
+              </a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class='space_bottom'></div>
   <!-- Periodic Section Start -->
   <a name='periodic'></a><a name='periodica-espanol'></a>
   <div class="parallax-container valign-wrapper">
@@ -437,60 +491,6 @@
     </div>
   </div>
  <div class='space_bottom'></div>
- <!-- Pacman Section Start -->
- <a name='pacman'></a><a name='pacman-espanol'></a>
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h3 class="header col s12 black lighten-1">Pacman (Javascript + CSS)</h3>
-        </div>
-      </div>
-    </div>
-    <br><br><br>
-    <div class="parallax"><img src="img/pacman_portfolio.png" alt="Unsplashed background img 3"></div>
-  </div>
-  <br><br><br>
-  <div class="container">
-    <div class="section">
-      <div class="row">
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">help_outline</i></h2>
-            <h5 class="center" id='details pacman header'>Details</h5>
-            <p class="light" id='details pacman'>Here is my implementation of Pacman. It was made purely with Javascript on the front-end. This was finished before I attended the coding bootcamp. Targeted for Firefox.</p>
-          </div>
-        </div>
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><a href='http://mikeberger.us/Pacman/'><i class="material-icons">play_circle_filled</i></a></h2>
-            <h5 class="center" id='deployment pacman header'>See Deployment</h5>
-            <p class="light">
-              <a href='http://mikeberger.us/Pacman/'>
-                <center>
-                  <h5><span id='deployment pacman'>Play Pacman</span></h5>
-                </center>
-              </a>
-            </p>
-          </div>
-        </div>
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><a href='https://github.com/dacoolman/Pacman'><i class="material-icons">settings</i></a></h2>
-            <h5 class="center" id='code pacman header'>See Code</h5>
-            <p class="light">
-              <a href='https://github.com/dacoolman/Pacman'>
-                <center>
-                  <h5><span id='code pacman'>See Github Repository</span></h5>
-                </center>
-              </a>
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class='space_bottom'></div>
   <!-- Chatroom Section Start -->
   <a name='chatroom'></a><a name='sala-espanol'></a>
   <div id='slider_chatroom' class="slider chatroom">
