Updating description pacman

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">help_outline</i></h2>
             <h5 class="center" id='details pacman header'>Details</h5>
-            <p class="light" id='details pacman'>Here is my implementation of Pacman. Code supports having as many ghosts and pacman as desired. Made with vanilla javascript on the client. Supported on Firefox and Chrome.</p>
+            <p class="light" id='details pacman'>Here is my implementation of Pacman. Beat the five pre-created levels to win the game, or create your own custom level (saved to your machine with localStorage). Made with vanilla javascript on the client. Supported on Firefox and Chrome.</p>
           </div>
         </div>
         <div class="col s12 m4">
